--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 						<div class="content">
 							<div class="inner">
 							  <h1><strong>باروس، راهکار سفر های تجاری</strong></h1>
-							  <p>HTML5 UP and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+							  <p> باروس با هدف، کمک به جامعه شهر های گردشگری و کسب و کار هایی که<br />
+					به عملکرد بهینه، آموزش و رفاه کارمندان خود </a> license.</p>
 							</div>
 						</div>
 						<nav>
